[project]
name = "jcb-livelink-platform"
version = "0.1.0"
description = "Uses the JCB LiveLink API to pull in available information for display in a UI on the Doover platform via the Doover tag system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "pydoover>=0.4.13",
]

[project.scripts]
export-config = "jcb_livelink_platform.app_config:export"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
